--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
