--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "axios": "^1.7.9",
     "file-loader": "^6.2.0",
     "gsap": "^3.12.5",
+    "mongoose": "^8.9.5",
     "next": "15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
