business ineteligence page modified

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
     "file-loader": "^6.2.0",
     "gsap": "^3.12.5",
