--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwind-scrollbar": "^4.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "postcss": "^8",
-    "tailwindcss": "^4.0.0"
+    "@tailwindcss/postcss": "^4.0.3",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3"
   }
 }
